# JointMode-EGM-Vive-Python

./: EGM_connection.mod  README.md  Vive.py  controller.py  main.py  robot_egm.pyd  test.py  testABB.py
controller/: controller.py  main_monitor.py  math3D.py  robot_egm.pyd  testABB.py
test/EGM test/: CMakeLists.txt  demo.py  robot_egm.cpp
test/boosttest/: CMakeLists.txt  hello.cpp  hello.py  hello.pyd
test/pyopenvr test/: ViveThread.py  test.py  test2.py
